<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:paddingLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/transient_name"
                    android:id="@+id/transient_name"
                    />

                <TextView
                    android:paddingLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/transient_ra"
                    android:id="@+id/transient_ra"
                    />
                <TextView
                    android:paddingLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/transient_dec"
                    android:id="@+id/transient_dec"
                    />
                <TextView
                    android:paddingLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/transient_op"
                    android:id="@+id/transient_op"
                    />
            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <Button
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/CloudImage"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:text="Follow"
                />
        </LinearLayout>
        </LinearLayout>
</LinearLayout>