<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/transient_name"
                    android:id="@+id/news_item_name"
                    android:textColor="#FFFFFF"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=" my "
                    android:textColor="#FFFFFF"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/transient_ra"
                    android:id="@+id/news_item_attribute_name"
                    android:textColor="#FFFFFF"
                />

        </LinearLayout>

        <TextView
            android:paddingLeft="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/transient_dec"
            android:id="@+id/news_item_attribute_value"
            android:textColor="#FFFFFF"
            />
        </LinearLayout>
</LinearLayout>