<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--tools:context="transientwatch.com.transientwatch.HelpActivity"-->
    <!--android:background="@drawable/background1"-->
    <!--android:orientation="vertical">-->
    <!--<ScrollView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content">-->

    <!--<TextView-->
        <!--android:textAlignment="gravity"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="left"-->
        <!--android:text="Orbital Peroid (op)"-->
        <!--android:textSize="30dp"-->
        <!--android:textColor="#fff"-->
        <!--/>-->

    <!--<TextView-->
        <!--android:padding="8dp"-->
        <!--android:textAlignment="gravity"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/op"-->
        <!--android:textSize="20dp"-->
        <!--android:textColor="#fff"-->
        <!--/>-->

    <!--<TextView-->
        <!--android:paddingTop="10dp"-->
        <!--android:textAlignment="gravity"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="left"-->
        <!--android:text="Declination"-->
        <!--android:textSize="30dp"-->
        <!--android:textColor="#fff"-->
        <!--/>-->

    <!--<TextView-->
        <!--android:padding="8dp"-->
        <!--android:textAlignment="gravity"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/dc"-->
        <!--android:textSize="20dp"-->
        <!--android:textColor="#fff"-->
        <!--/>-->

    <!--<TextView-->
        <!--android:paddingTop="10dp"-->
        <!--android:textAlignment="gravity"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="left"-->
        <!--android:text="Right Ascention"-->
        <!--android:textSize="30dp"-->
        <!--android:textColor="#fff"-->
        <!--/>-->

    <!--<TextView-->
        <!--android:padding="8dp"-->
        <!--android:textAlignment="gravity"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/ra"-->
        <!--android:textSize="20dp"-->
        <!--android:textColor="#fff"-->
        <!--/>-->
    <!--</ScrollView>-->
<!--</LinearLayout>-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                android:textAlignment="gravity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Orbital Peroid (op)"
                android:textSize="30dp"
                android:textColor="#fff"
                />

                <TextView
                android:padding="8dp"
                android:textAlignment="gravity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/op"
                android:textSize="20dp"
                android:textColor="#fff"
                />

                <TextView
                android:paddingTop="10dp"
                android:textAlignment="gravity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Declination"
                android:textSize="30dp"
                android:textColor="#fff"
                />

                <TextView
                android:padding="8dp"
                android:textAlignment="gravity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/dc"
                android:textSize="20dp"
                android:textColor="#fff"
                />

                <TextView
                android:paddingTop="10dp"
                android:textAlignment="gravity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Right Ascention"
                android:textSize="30dp"
                android:textColor="#fff"
                />

                <TextView
                android:padding="8dp"
                android:textAlignment="gravity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/ra"
                android:textSize="20dp"
                android:textColor="#fff"
                />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
